@@ -27,7 +27,7 @@ For more design details, please refer to: [TIP298](https://github.com/tronprotoc
 
 ### Use Steps
 
-- 1. Make sure the FullNode service is stopped.
+- 1. Stop the FullNode service.
 - 2. Execute the ArchiveManifest plugin.
 - 3. Start the FullNode service.
 
@@ -36,17 +36,31 @@ For more design details, please refer to: [TIP298](https://github.com/tronprotoc
 ### How to use
 
 After FullNode runs, the default database directory: `output-directory`, the optimization plugin will work with the `output-directory/database` directory.
-
+Developers can choose one of the following two ways  according to actual situation.
 
 #### 1. Use it Independently
 
-First, stop the FullNode and execute:
+##### 1.Stop the FullNode service
+
+Use `kill -15 ` to shutdown the FullNode.jar .
+
+Query the pid: `ps -ef |grep FullNode.jar |grep -v grep |awk '{print $2}'`
+
+
+
+##### 2.Execute the ArchiveManifest plugin
 
 ```shell
+# Full command
 java -jar ArchiveManifest.jar [-b batchSize] [-d databaseDirectory] [-m manifestSize] [-h]
+# examples
+   java -jar ArchiveManifest.jar #1. use default settings
+   java -jar ArchiveManifest.jar -d /tmp/db/database #2. Specify the database directory as /tmp/db/database
+   java -jar ArchiveManifest.jar -b 64000 #3. Specify the batch size to 64000 when optimizing Manifest
+   java -jar ArchiveManifest.jar -m 128 #4. Specify optimization only when Manifest exceeds 128M
 ```
 
-After the command is executed, `archive.log` will be generated in the `. /logs` directory, you can see the result.
+After the command is executed, `archive.log` will be generated in the `./logs` directory, you can see the result.
 
 > Note: After the command is executed，If successful, the log will display something similar to the following,
 > and will run generally within 120s, depending on how long the FullNode service keeps running,
@@ -55,7 +69,14 @@ After the command is executed, `archive.log` will be generated in the `. /logs` 
 > `[main] [archive](ArchiveManifest.java:144) DatabaseDirectory:output-directory/database, maxManifestSize:0, maxBatchSize:80000,database reopen use 80 seconds total.`
 
 
-Last, start the FullNode.
+##### 3.Start the FullNode service
+
+```shell
+ #FullNode
+nohup java -Xmx24g -XX:+UseConcMarkSweepGC -jar FullNode.jar -c main_net_config.conf </dev/null &>/dev/null &
+ #SR Node
+nohup java -Xmx24g -XX:+UseConcMarkSweepGC  -jar FullNode.jar  -p  private key --witness -c main_net_config.conf </dev/null &>/dev/null &
+```
 
 #### 2. Integrated startup script
 
@@ -220,11 +241,12 @@ startService() {
 
 }
 
-
+#1.Stop the FullNode service
 stopService
 
 checkPath
 
+#2.Execute the ArchiveManifest plugin
 if [[ 0 ==  $? ]] ; then
  rebuildManifest
 else
@@ -232,7 +254,7 @@ else
 fi
 
 sleep 5
-
+# Start the FullNode service
 startService
 ```
  example
@@ -244,6 +266,14 @@ startService
 
 
 ```shell
+# Full command
 ./start.sh [FullNode|SolidityNode] [--rewrite--manifest] [-b batchSize] [-d databaseDirectory] [-m manifestSize]
+# examples
+  ./start.sh #1. Start the FullNode.jar service without the plugin
+   ./start.sh SolidityNode #2. Start the SolidityNode.jar service without the plugin
+   ./start.sh FullNode --rewrite--manifest #3. Execute the optimization plugin with default settings and start the FullNode.jar service
+   ./start.sh --rewrite--manifest -d /tmp/db/database #4. Specify the database directory as /tmp/db/database, execute the optimization plugin, and start the FullNode.jar service
+   ./start.sh --rewrite--manifest -b 64000 #5. Specify the batch size to 64000 when optimizing Manifest, and start the FullNode.jar service
+   ./start.sh --rewrite--manifest -m 128 #6. Specify that optimization is performed only when the Manifest exceeds 128M, and start the FullNode.jar service
 ```
 
